--- a/official-ws/nodejs/package.json
+++ b/official-ws/nodejs/package.json
@@ -23,6 +23,7 @@
     "debug": "^2.6.6",
     "eventemitter2": "^4.1.0",
     "lodash": "^4.17.4",
+    "socks-proxy-agent": "^4.0.1",
     "superagent": "^3.5.2",
     "ws": "^2.3.1"
   }
