--- a/official-ws/nodejs/package.json
+++ b/official-ws/nodejs/package.json
@@ -20,6 +20,7 @@
   "author": "Samuel Reed <samuel.trace.reed@gmail.com> (http://strml.net/)",
   "license": "MIT",
   "dependencies": {
+    "bitfinex-api-node": "^2.0.0-beta.1",
     "debug": "^2.6.6",
     "eventemitter2": "^4.1.0",
     "lodash": "^4.17.4",
