--- a/official-ws/nodejs/package.json
+++ b/official-ws/nodejs/package.json
@@ -24,8 +24,10 @@
     "debug": "^2.6.6",
     "eventemitter2": "^4.1.0",
     "lodash": "^4.17.4",
+    "mocha": "^5.2.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
+    "should": "^13.2.1",
     "socks-proxy-agent": "^4.0.1",
     "superagent": "^3.5.2",
     "technicalindicators": "^1.1.11",
