--- a/official-ws/nodejs/package.json
+++ b/official-ws/nodejs/package.json
@@ -31,6 +31,7 @@
     "socks-proxy-agent": "^4.0.1",
     "superagent": "^3.5.2",
     "technicalindicators": "^1.1.11",
+    "winston": "^3.0.0",
     "ws": "^2.3.1"
   }
 }
