--- a/official-ws/nodejs/package.json
+++ b/official-ws/nodejs/package.json
@@ -32,6 +32,7 @@
     "superagent": "^3.5.2",
     "technicalindicators": "^1.1.11",
     "winston": "^3.0.0",
-    "ws": "^2.3.1"
+    "ws": "^2.3.1",
+    "yargs": "^12.0.1"
   }
 }
