--- a/official-ws/nodejs/package.json
+++ b/official-ws/nodejs/package.json
@@ -23,6 +23,7 @@
     "bitfinex-api-node": "^2.0.0-beta.1",
     "debug": "^2.6.6",
     "eventemitter2": "^4.1.0",
+    "express": "^4.16.3",
     "lodash": "^4.17.4",
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
