--- a/official-ws/nodejs/package.json
+++ b/official-ws/nodejs/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "bitfinex-api-node": "^2.0.0-beta.1",
+    "body-parser": "^1.18.3",
     "debug": "^2.6.6",
     "eventemitter2": "^4.1.0",
     "express": "^4.16.3",
