--- a/official-ws/nodejs/package.json
+++ b/official-ws/nodejs/package.json
@@ -29,6 +29,7 @@
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
+    "progress": "^2.0.0",
     "should": "^13.2.1",
     "socks-proxy-agent": "^4.0.1",
     "superagent": "^3.5.2",
