--- a/official-ws/nodejs/package.json
+++ b/official-ws/nodejs/package.json
@@ -25,6 +25,7 @@
     "debug": "^2.6.6",
     "eventemitter2": "^4.1.0",
     "express": "^4.16.3",
+    "influx": "^5.0.7",
     "lodash": "^4.17.4",
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
