--- a/official-ws/nodejs/package.json
+++ b/official-ws/nodejs/package.json
@@ -33,6 +33,7 @@
     "moment-timezone": "^0.5.21",
     "pako": "^1.0.7",
     "progress": "^2.0.0",
+    "pusher-js": "^4.3.1",
     "should": "^13.2.1",
     "socks-proxy-agent": "^4.0.1",
     "superagent": "^3.5.2",
