--- a/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/server/package.json
+++ b/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/server/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@sentry/node": "^4.5.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
