--- a/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/deploy/human-strategy.conf
+++ b/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/deploy/human-strategy.conf
@@ -2,7 +2,7 @@ server {
   listen 3004;
   server_name localhost1;
   location / {
-    root /data/www/block_web;
+    root /data/www/human-strategy;
     try_files $uri $uri/ /index.html;
   }
   location ^~/api/ {
