--- a/official-ws/nodejs/package.json
+++ b/official-ws/nodejs/package.json
@@ -36,9 +36,10 @@
     "progress": "^2.0.0",
     "pusher-js": "^4.3.1",
     "should": "^13.2.1",
-    "socks-proxy-agent": "^4.0.1",
+    "socks-proxy-agent": "^4.0.2",
     "superagent": "^3.5.2",
     "technicalindicators": "^1.1.11",
+    "telegraf": "^3.27.1",
     "winston": "^3.0.0",
     "ws": "^2.3.1",
     "yargs": "^12.0.1"
