--- a/official-ws/nodejs/influxdb/hight_frequent/bitmexDataSignal/deploy/bitmex_data_signal.conf
+++ b/official-ws/nodejs/influxdb/hight_frequent/bitmexDataSignal/deploy/bitmex_data_signal.conf
@@ -1,11 +1,11 @@
 server {
-  listen 3004;
+  listen 3006;
   server_name localhost1;
   location / {
     root /data/www/bitmex_data_signal;
     try_files $uri $uri/ /index.html;
   }
   location ^~/api/ {
-    proxy_pass http://localhost:3006s;
+    proxy_pass http://localhost:3007;
   }
 }
