--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ npm-debug.log
 **/restore_temp
 **/temp
 official-ws/nodejs/strategy/data/*.json
+official-ws/nodejs/influxdb/hight_frequent/bitmexDataSignal/web/build.zip
