--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ npm-debug.log
 official-ws/nodejs/strategy/data/*.json
 official-ws/nodejs/influxdb/hight_frequent/bitmexDataSignal/web/build.zip
 official-ws/nodejs/strategy/apikey/test-secret-yqhero.json
+official-ws/nodejs/strategy/backtest/test_rsi/report/*.html
