--- a/official-ws/nodejs/package.json
+++ b/official-ws/nodejs/package.json
@@ -32,6 +32,7 @@
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
+    "mustache": "^3.0.1",
     "pako": "^1.0.7",
     "progress": "^2.0.0",
     "pusher-js": "^4.3.1",
