--- a/official-ws/nodejs/package.json
+++ b/official-ws/nodejs/package.json
@@ -35,6 +35,7 @@
     "mustache": "^3.0.1",
     "pako": "^1.0.7",
     "progress": "^2.0.0",
+    "puppeteer-core": "^1.19.0",
     "pusher-js": "^4.3.1",
     "should": "^13.2.1",
     "socks-proxy-agent": "^4.0.2",
