--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ official-ws/nodejs/strategy/data/*.json
 official-ws/nodejs/influxdb/hight_frequent/bitmexDataSignal/web/build.zip
 official-ws/nodejs/strategy/apikey/test-secret-yqhero.json
 official-ws/nodejs/strategy/backtest/test_rsi/report/*.html
+official-ws/nodejs/strategy/backtest/**/*.pdf
