--- a/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/web/package.json
+++ b/official-ws/nodejs/influxdb/hight_frequent/humanStrategyServer/web/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "chart.js": "^2.8.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "2.1.3"
   },
   "scripts": {
