--- a/official-ws/nodejs/package.json
+++ b/official-ws/nodejs/package.json
@@ -25,6 +25,7 @@
     "bitfinex-api-node": "^2.0.0-beta.1",
     "body-parser": "^1.18.3",
     "debug": "^2.6.6",
+    "decimal.js": "^10.2.0",
     "eventemitter2": "^4.1.0",
     "express": "^4.16.3",
     "influx": "^5.0.7",
